# lscrib

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  release-please-config.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md
lscrib-api/: .env.example  README.md  alembic.ini  pyproject.toml
lscrib-api/src/lscrib/: __init__.py  config.py
lscrib-api/src/lscrib/api/: app.py  meta.py  routes.py
lscrib-api/src/lscrib/db/: __init__.py  migrate.py  models.py  session.py
lscrib-api/src/lscrib/db/migrations/: env.py  script.py.mako
lscrib-api/src/lscrib/db/migrations/versions/: 0001_initial_schema.py
lscrib-api/src/lscrib/domain/: __init__.py  models.py
lscrib-api/src/lscrib/export/: __init__.py  formats.py
lscrib-api/src/lscrib/media/: __init__.py  ffmpeg.py
lscrib-api/src/lscrib/models/: __init__.py  registry.py
lscrib-api/src/lscrib/system/: __init__.py  cpu.py
lscrib-api/src/lscrib/transcribe/: __init__.py  whisper.py
lscrib-api/src/lscrib/worker/: __init__.py  events.py  queue.py
lscrib-api/tests/: conftest.py  test_cpu_check.py  test_export.py  test_pipeline_integration.py  test_registry.py  test_routes_extra.py  test_state_machine.py  test_worker_unit.py
lscrib-web/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
lscrib-web/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
lscrib-web/src/i18n/: index.tsx  (+1 more)
(+21 files in other folders)
